--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -31,7 +31,7 @@
             z-index: 9999;
         }       
         .logo-canto-direito img {
-        height: 60px; /* escolha o tamanho ideal para sua logo */
+        height: 60px; 
         width: auto;
         }
     </style>
@@ -45,6 +45,7 @@
         <a href="{{ url_for('index') }}">Início</a>
         {% if current_user.is_authenticated %}
             <a href="{{ url_for('dashboard') }}">Dashboard</a>
+            <a href="{{ url_for('perfil') }}">Meu Perfil</a>
             <a href="{{ url_for('logout') }}">Sair</a>
         {% else %}
             <a href="{{ url_for('login') }}">Login</a>
