--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -26,4 +26,7 @@
     <p style="margin-top: 15px;">
         Não tem uma conta? <a href="{{ url_for('registro') }}" class="link">Registre-se aqui</a>
     </p>
+    <p>
+        <a href="{{ url_for('esqueci_senha') }}" class="link">Esqueceu sua senha?</a>
+    </p>
 {% endblock %}
