--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -51,7 +51,13 @@
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 4px;
+            font-size: 14px;
         }
+
+        select.form-control option:disabled {
+        color: #999;
+        background: #f5f5f5;
+}
 
     </style>
 </head>
@@ -65,6 +71,7 @@
     
     {% if current_user.is_authenticated %}
         <a href="{{ url_for('listar_quadras') }}">Quadras</a>
+        <a href="{{ url_for('minhas_reservas') }}">Minhas Reservas</a>
         <a href="{{ url_for('dashboard') }}">Dashboard</a>
         <a href="{{ url_for('perfil') }}">Meu Perfil</a>
         
@@ -85,6 +92,7 @@
         <a href="{{ url_for('registro') }}">Registrar</a>
     {% endif %}
 </div>
+
 
 
     <div class="container">
